<resources>
    <string name="app_name">یارا تیوب</string>
    <string name="user_name">نام کاربر</string>
    <string name="profile">پروفایل</string>
    <string name="about_us">درباره ما</string>
    <string name="contact_us">تماس با ما</string>
    <string name="main_page">صفحه اصلی</string>
    <string name="categories">دسته بندی ها</string>
    <string name="navigation">جهت یابی</string>
    <string name="cancel">انصراف</string>
    <string name="record_changes">ثبت تغییرات</string>
    <string name="full_name">نام و نام خانوادگی</string>
    <string name="sex">جنسیت</string>
    <string name="birth_date">تاریخ تولد</string>
    <string name="man">مرد</string>
    <string name="woman">زن</string>
    <string name="product_detail">جزییات محصول</string>
    <string name="description">توضیحات</string>
    <string name="users_comments">نظرات کاربران</string>
    <string name="comment">نظر دهید</string>
    <string name="opinion">نظر</string>
    <string name="toast_click_again_to_exit">برای خروج مجددا کلیک نمایید</string>
    <string name="via_phone_number">از طریق شماره موبایل</string>
    <string name="via_google_account">از طریق حساب گوگل</string>
    <string name="enter_via_phone_number">ورود از طریق شماره موبایل</string>
    <string name="enter_your_phone_number">شماره تلفن همراه خود را وارد کنید</string>
    <string name="enter_activation_code">کد فعال سازی را وارد کنید</string>
    <string name="activation_code">کد فعال سازی</string>
    <string name="did_not_you_receive_code">کد را دریافت نکردید؟</string>
    <string name="enter">ورود</string>
    <string name="record">ثبت</string>
    <string name="number_correction">تصحیح شماره</string>
    <string name="your_login_did_successfully">ورود شما با موفقیت انجام شد</string>
    <string name="your_comment_recorded_successfully">نظر شما با موفقیت ثبت شد</string>
    <string name="internet_error_header">عدم اتصال به اینترنت</string>
    <string name="internet_error_message">اتصال شما به اینترنت برقرار نیست. برای استفاده از برنامه به اینترنت متصل شوید.</string>
    <string name="internet_wi_fi">اینترنت Wi-Fi</string>
    <string name="internet_mobile">اینترنت موبایل</string>
    <string name="more">بیشتر</string>
    <string name="galery">گالری</string>
    <string name="camera">دوربین</string>
</resources>