<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl">

    <android.support.constraint.Guideline
        android:id="@+id/login_fragment_gl_y3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <android.support.constraint.Guideline
        android:id="@+id/login_fragment_gl_y5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/login_fragment_gl_y6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <android.support.constraint.Guideline
        android:id="@+id/login_fragment_gl_y8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <android.support.constraint.Guideline
        android:id="@+id/login_fragment_gl_x1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/login_fragment_gl_x9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/login_fragment_gl_y3"
        app:layout_constraintRight_toRightOf="@id/login_fragment_gl_x1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_fragment_btn_phone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#3b89d2"
        android:drawableRight="@drawable/smartphone__1_"
        android:paddingRight="10dp"
        android:text="@string/via_phone_number"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintBottom_toBottomOf="@id/login_fragment_gl_y5"
        app:layout_constraintLeft_toLeftOf="@id/login_fragment_gl_x9"
        app:layout_constraintRight_toRightOf="@id/login_fragment_gl_x1"
        app:layout_constraintTop_toTopOf="@id/login_fragment_gl_y3" />

    <Button
        android:id="@+id/login_fragment_btn_google"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/shape"
        android:text="@string/via_google_account"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintBottom_toBottomOf="@id/login_fragment_gl_y8"
        app:layout_constraintLeft_toLeftOf="@id/login_fragment_gl_x9"
        app:layout_constraintRight_toRightOf="@id/login_fragment_gl_x1"
        app:layout_constraintTop_toTopOf="@id/login_fragment_gl_y6" />

</android.support.constraint.ConstraintLayout>